--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -171,8 +171,47 @@ undress for anyone other than itself
 
 </div>
 
-    <p>Coming soon: Content for this page will explore how poetic form and method function as research in waveform pedagogy.</p>
-  
+<p>In qualitative research, there are many ways to employ narrative inquiry and its variations, including poetic inquiry. But one form of (re)searching especially interested me: the poem itself as research&mdash;not as reflection or artifact, but as method. I’m interested in the poem as a way of intentionally, systematically, and reflexively rendering experience through a structured system of linguistic representation. For me, poetry offers opportunities to theorize, abstract, and know more deeply. Spoken word is a truth-telling form. I first began to understand this when a student performed a spoken word piece about gentrification in his city. The poem questioned, theorized, and made an argument using lived experience as data. It had all the qualities that teachers of writing want in traditional research papers. Yet, our impulse to explain is great. As teachers and researchers, we have been trained to do this:</p>
+
+<p style="margin-left: 2em;"><em>our voices hover, linger,<br>
+always waiting to interject<br>
+like a butterfly caught between </em></p>
+
+<p style="margin-left: 2em;"><em>winter and spring</em></p>
+
+<p>What if we could suspend that desire to control meaning? What if we treated the poem not as an object to analyze, but as the analysis itself? This particular audio poem was born from my own attempt to let go of this control,</p>
+
+<p style="text-indent: 2em;"><em>to let the poem speak for itself&mdash;</em></p>
+<p style="text-indent: 2em;"><em>and yet, here I am again:</em></p>
+<p style="text-indent: 2em;"><em>the researcher, explaining,</em></p>
+<p style="text-indent: 2em;"><em>genuflecting in the footnotes,</em></p>
+<p style="text-indent: 2em;"><em>covering myself</em></p>
+<p style="text-indent: 2em;"><em>with a fig leaf of citations,</em></p>
+<p style="margin-left: 2em;"><em>the nectar of explication <br>
+dripping from my chin</em></p>
+
+<h2>Sonic Poetic Inquiry</h2>
+
+<p>Poetic inquiry (Faulkner, 2020; Prendergast et al., 2009) is an arts-based methodology. Sandra Faulkner (2017) defined poetic inquiry as “the use of poetry crafted from research endeavors, either before a project analysis, as a project analysis, and/or poetry that is part of or that constitutes an entire research project” (p. 210). This study attempts to enact all three, not just on the page, but in three-dimensional space through the use of sound. My compositions include:</p>
+
+<ul>
+  <li>Audio poems <em>made from</em> samples&mdash;interviews, focus groups, archival performance recordings</li>
+  <li>Audio poems <em>about</em> research process, methodology, and theory (like this one)</li>
+  <li>Audio poems that <em>are</em> research, standing alone as data and analysis</li>
+</ul>
+
+<p>Faulkner's phrase&mdash;<em>poetry as/in/for inquiry</em>&mdash;is a guiding frame, but I wanted to remix and complicate the distinction. What if poetry moves <em>through</em> different modes of inquiry and representation? What if it loops back and forth across those categories&mdash;resisting location like a quantum particle in two places at once, never definitively at one point in space or time until observed? Each mode is here. And none is separate from the others.</p>
+
+<h2>From Erasure to Creation</h2>
+
+<p>Anthony Keith Jr. and Crystal Leigh Endsley (2020) introduced “Blackout Poetic Transcription,” a method rooted in Hip Hop pedagogy, critical race theory, and aesthetics like layering, rupture, and flow (Rose, 1994). This work inspired my own sampling process, where fragments of audio are transformed through acts of omission and erasure.</p>
+
+<p style="margin-left: 2em;"><em>I took a Sharpie to the sounds,<br>
+left only the remnants.<br>
+what’s left is everything</em></p>
+
+<p>Meaning emerges not only in what is preserved, but in what is strategically removed. The results are new compositions, research poems that pulse with absence and presence in equal measure.</p>
+
   <div class="track-nav">
   <a href="realm-of-entities.html">
   <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
