--- a/otto-song.html
+++ b/otto-song.html
@@ -251,6 +251,11 @@ so thank you from the bottom of my heart
 
 <p>Another hobby that Otto took up in recent years is making custom computer keyboards. We decided to sample the sound of Otto pressing buttons on one of these keyboards as a texture for the track. This sample became a layer of percussion in the final composition. During high school, Otto played guitar as a music major in our high school’s performing arts department. I asked if they had any old recordings we could sample for the song. Otto told me they still had “all these [unfinished] tunes and riffs and licks.” After a little searching, we found an old recording of Otto playing guitar, which makes up one of the melodic leads for the song we composed together. This blend of guitar riffs, keyboard sounds, and game aesthetics functions as both sonic data and symbolic texture, a personalized soundscape that embodies Otto’s layered intersectional identities.</p>
 
+<figure class="participant-image-float-right">
+  <img src="media/images/otto-blackbox.jpg" alt="Otto performing spoken word at Word Up! with arms outstretched, addressing the audience in the Black Box Theater.">
+  <figcaption>Figure 5: Otto performing at Word Up! This scene, with Otto with arms outstretched, addressing a full house—became central to their praisesong and our co-authorship.</figcaption>
+</figure>
+
 <h2>Decolonized Judaism</h2>
 
 <p>During our interviews, Otto read poems about Jewish identity. They told me about how they’ve “been thinking a lot about my Jewish identity in terms of queerness and anticolonialism” and over the years have been contemplating a “decolonized Judaism.” Otto criticized the occupation of Palestine and distinguished between Judaism and Israeli statehood, reflecting on what makes something a home(land), which reminded me of conversations with Edsel. As a person and artist committed to social justice, Otto demonstrated a sensitivity to the humanity of all people, including their Jewish ancestors and the trans community.</p>
