--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -304,6 +304,11 @@ I was just like, wow we did something really incredible
 
 <p>When I asked Fatmata what she was most proud of about the younger version of herself, she stated, “I’m most proud of the fact that even though I couldn’t see past what was going on, I kept going.” While I knew about some of the challenges she faced in high school, others I was unaware of, including her dyslexia. I didn’t have Fatmata in my traditional English courses during the day, so we only worked together in an extracurricular context after school through the slam poetry club. I wasn’t invested in “grading” her writing or assessing it in a formal sense. She asked, “Do you have to write a certain way to be considered literate?” as she reflected back on her challenges with reading and writing.</p>
 
+<figure class="participant-image-float-left">
+  <img src="media/images/fatmata-blackbox.jpg" alt="Fatmata performing spoken word at Word Up!, reading from the page into the mic.">
+  <figcaption>Figure 6: Fatmata performing at Word Up!. Balancing emotional vulnerability and bold humor, she brought hallmarks of her voice that reverberate through her praisesong.</figcaption>
+</figure>
+
 <p>Fatmata described having trouble spelling, writing, and trying to memorize poems. She recalled that I “never pressured” her to memorize a poem to perform on stage. Fatmata insisted she could “read and speak really well.” Even in progressive educational spaces, we can limit the brilliance of young people with artificial restrictions that prevent them from bringing their full selves to the classroom. If I had pressured Fatmata to memorize her poems, a common practice in some youth poetry spaces, she may have never found the courage to get on stage and share her poetry with us. Fatmata’s story pushes us to reimagine what counts as literacy and who gets to be seen as literate.</p>
 
 <h2>PRIDE</h2>
