--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -258,7 +258,7 @@ spiritual space
 
 <figure class="participant-image-float-left">
   <img src="media/images/aaleah-blackbox.jpg" alt="Aaleah performing spoken word at Word Up! under a single overhead stage light.">
-  <figcaption>Figure 4: Aaleah performing at Word Up!. This moment helped inspire the collaborative composition that became “Aaleah’s Song.”</figcaption>
+  <figcaption>Figure 4: Aaleah performing at Word Up. Surrounded by the audience and illuminated by a single overhead stage light in the Black Box Theater, this moment helped inspire the collaborative composition that became “Aaleah’s Song.””</figcaption>
 </figure>
 
 <p>During this time, Aaleah explained how money took on a new kind of value because of its absence. She thought about pennies underneath couch cushions, how usually we don’t pay much attention to them. But during that time, all money took on an increased significance for her and her family. This was partly the inspiration for “Out of Many, One,” which none of us knew at the time. This layered narrative&mdash;personal, political, and poetic&mdash;represents a kind of <em>sampled consciousness</em> (karimi, 2006), as fragments of personal history and memory are remixed into sonic counter-narratives.</p>
