--- a/edsel-song.html
+++ b/edsel-song.html
@@ -280,9 +280,9 @@ we’re all one right now
 
 <figure class="participant-image-float-right">
   <img src="media/images/edsel-blackbox.jpg" alt="Edsel performing spoken word at Word Up! in the Black Box Theater.">
-  <figcaption> Figure 3: Edsel performing a spoken word poem at Word Up! in the Black Box Theater. This performance was later sampled for his praisesong.</figcaption>
+  <figcaption> Figure 3: Edsel performing a spoken word poem at <em>Word Up</em> in the Black Box Theater. This performance was later sampled for his praisesong.</figcaption>
 </figure>
-
+   
 <p>After the interviews and focus groups, we looked for samples together by sending each other YouTube videos and songs that reflected themes we discussed. Edsel recommended that we sample a Kundiman song, which he described as Filipino love songs. He explained these as traditional serenades that originate from the period when the Philippines was being colonized. Edsel explained that usually a love song is addressed to an individual romantic partner, but these songs actually read as love songs written to the Philippines homeland itself. One of the main vocal leads in this track samples from a Kundiman song. Another important sound we included is a vocal chant from the T’Boli tribe of the Philippines. The T’Boli are one of almost 100 tribal groups in the Philippines. In this way, the Kundiman becomes a decolonial sonic citation&mdash;what we might call a “counter-sample.” Lastly, Edsel communicated that he would like the song to have a “Lofi” aesthetic, which is a genre of Hip Hop that includes vinyl-sounding distortion and effects that produce a warm, grainy aesthetic.</p>
 
 <h2>The Sounds of Homeplace</h2>
