--- a/otto-song.html
+++ b/otto-song.html
@@ -253,9 +253,9 @@ so thank you from the bottom of my heart
 
 <figure class="participant-image-float-right">
   <img src="media/images/otto-blackbox.jpg" alt="Otto performing spoken word at Word Up! with arms outstretched, addressing the audience in the Black Box Theater.">
-  <figcaption>Figure 5: Otto performing at Word Up! This scene, with Otto with arms outstretched, addressing a full house—became central to their praisesong and our co-authorship.</figcaption>
+  <figcaption>Figure 5: Otto performing at <em>Word Up</em>. With arms outstretched and voice amplified by the mic, Otto addresses a sold-out crowd in the Black Box Theater during a moment that inspired our co-authored praisesong.</figcaption>
 </figure>
-
+    
 <h2>Decolonized Judaism</h2>
 
 <p>During our interviews, Otto read poems about Jewish identity. They told me about how they’ve “been thinking a lot about my Jewish identity in terms of queerness and anticolonialism” and over the years have been contemplating a “decolonized Judaism.” Otto criticized the occupation of Palestine and distinguished between Judaism and Israeli statehood, reflecting on what makes something a home(land), which reminded me of conversations with Edsel. As a person and artist committed to social justice, Otto demonstrated a sensitivity to the humanity of all people, including their Jewish ancestors and the trans community.</p>
