--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -306,7 +306,7 @@ I was just like, wow we did something really incredible
 
 <figure class="participant-image-float-left">
   <img src="media/images/fatmata-blackbox.jpg" alt="Fatmata performing spoken word at Word Up!, reading from the page into the mic.">
-  <figcaption>Figure 6: Fatmata performing at Word Up!. Balancing emotional vulnerability and bold humor, she brought hallmarks of her voice that reverberate through her praisesong.</figcaption>
+  <figcaption>Figure 6: Fatmata performing at <em>Word Up</em>. Reading from the page while speaking into the mic, she balances vulnerability and humor, rhetorical qualities heard in her praisesong.</figcaption>
 </figure>
 
 <p>Fatmata described having trouble spelling, writing, and trying to memorize poems. She recalled that I “never pressured” her to memorize a poem to perform on stage. Fatmata insisted she could “read and speak really well.” Even in progressive educational spaces, we can limit the brilliance of young people with artificial restrictions that prevent them from bringing their full selves to the classroom. If I had pressured Fatmata to memorize her poems, a common practice in some youth poetry spaces, she may have never found the courage to get on stage and share her poetry with us. Fatmata’s story pushes us to reimagine what counts as literacy and who gets to be seen as literate.</p>
