--- a/recife.html
+++ b/recife.html
@@ -192,7 +192,7 @@ My curiosity never stop.
   </div>
 </div>
 
-    <h2>Sampling Critical Pedagogy Through Sonic Praxis</h2>
+    <h2>Finding Freire through Hip Hop</h2>
 
 <p class="center-text"><<em>conscientização</em> – Portuguese, meaning <em>critical consciousness</em></p>
 
@@ -200,11 +200,17 @@ My curiosity never stop.
 
 <p>Freire’s concept of <em>radical love</em>, rooted in Catholic liberation theology (Gutiérrez, 1973), became a pedagogical ethos for me. With that grounding, I felt compelled to sample critical pedagogy, and remix it through the aesthetics and sensibilities of Hip Hop, a culture that influenced so much of my life as I grew up outside New York City. I didn’t arrive at Freire through my academic journey as a graduate student. I came to critical pedagogy through Hip Hop. My first encounter with Freire was at Hip Hop in the Heartland, a summer teacher conference in Wisconsin, where a theater educator facilitated a <em>Theater of the Oppressed</em> (Boal, 1979) workshop. That experience inspired me to read as many critical theorists as possible, including scholars and public intellectuals like Henry Giroux, Peter McLaren, Shirley Steinberg, Ana Cruz, and Joe Kincheloe – all of whom are sampled here. These scholars helped shape my identity as a public-school teacher committed to education as a form of liberation.</p>
 
+<h2>Critical Literacy as Production and Performance</h2>
+
 <p>Paulo Freire and Donaldo Macedo (1987) insisted that “reading the world always precedes reading the word, and reading the word implies continually reading the world” (p. 23). When my students and I analyzed songs and poems like “The Message” (Grandmaster Flash), “U.N.I.T.Y.” (Queen Latifah), or “List of Demands” (Saul Williams), we engaged in complex readings of the world that offered social commentary delivered through the poetics of the breakbeat (Coval et al., 2015). Inspired by Nuyorican poetry slam traditions (Algarín &amp; Holman, 1994), we analyzed these texts, but also became critical producers of new texts as students composed their own performance poems for the stage. Our classroom became a site of participatory and performative literacy development that cultivated critical consciousness. It became a site of what Antwi Akom (2009) called Critical Hip Hop Pedagogy.</p>
+
+<h2>A Sonic Homage to Paulo Freire and the Sounds of Brasil</h2>
 
 <p>This track, "Recife to Ferguson,” is my homage to Freire. I wanted to bring his voice into direct conversation with the sonic aesthetics of Hip Hop, situating him (literally and metaphorically) in dialogue with other critical scholars, protest chants, and contemporary global events. In the track, you’ll hear samples from #BlackLivesMatter protests, the Dakota Access Pipeline resistance, and media coverage of the COVID-19 pandemic. You’ll also hear the voices of critical theorists layered over breakbeats and samba rhythms.</p>
 
 <p>The music draws on a Brazilian palette of sounds and textures as a way to honor Freire’s homeland. I made the beat using samba-influenced percussion and a lead melody sampled from a cavaquinho–a small, four-string instrument originating in Portugal. The hook features chopped up vocals from a Brazilian folksinger, reconfigured into a new musical sentence. These aesthetic choices are part of an intentional sonic methodology, a transnational homage, and an affirmation of Hip Hop’s Afro-diasporic lineage.</p>
+
+<h2>The Praxis of Music Production</h2>
 
 <p class="center-text">The production itself was a praxis for me&mdash;<br>
 a praxis of critical music production /<br>
