--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -171,6 +171,8 @@ undress for anyone other than itself
 
 </div>
 
+<h2>Poetry as Method or / Letting the Poem Speak for Itself</h2>
+    
 <p>In qualitative research, there are many ways to employ narrative inquiry and its variations, including poetic inquiry. But one form of (re)searching especially interested me: the poem itself as research&mdash;not as reflection or artifact, but as method. I’m interested in the poem as a way of intentionally, systematically, and reflexively rendering experience through a structured system of linguistic representation. For me, poetry offers opportunities to theorize, abstract, and know more deeply. Spoken word is a truth-telling form. I first began to understand this when a student performed a spoken word piece about gentrification in his city. The poem questioned, theorized, and made an argument using lived experience as data. It had all the qualities that teachers of writing want in traditional research papers. Yet, our impulse to explain is great. As teachers and researchers, we have been trained to do this:</p>
 
 <p style="margin-left: 2em;"><em>our voices hover, linger,<br>
