--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -250,9 +250,11 @@ spiritual space
 
 </div>
 
-<h2>Sunbeams</h2>
+<h2>Out of Many, One: Poem as Counter-Narrative</h2>
 
 <p>When I wrote about Aaleah in my earlier work (Mooney, 2016), I thought I understood her poem, “Out of Many, One.” It’s a persona poem in the voice of a penny, but it’s really a commentary on capitalism and anti-Blackness. At least, that’s how I always read it. The penny is tired of being undervalued. It knows the rest of the economy is built on its back, but always finds itself being tossed into fountains “to make their dreams come true.” It gets tired and just wants to be “used or discontinued.” When Aaleah first wrote and shared this piece in a workshop, the room fell silent. Fatmata, one of my other collaborators, recalled how an observer could “hear a pin drop” as we listened to Aaleah’s words. Then she performed it in the theater for a crowd to the same effect. In this webtext, I revisit Aaleah’s poetry not only as memory or artifact, but as part of a larger framework that situates sonic and poetic forms as sites of resistance.</p>
+
+<h2>Reconvening</h2>
 
 <p>Aaleah and I recalled that poem and she discussed what it meant for her then, and how she sees it now as a young adult. She remembered how “empowering” it felt to “create worlds on paper.” That poem took on new meaning after she shared with me a painful experience about a temporary period of time during her adolescence in which her family was temporarily without a home. Aaleah described living out of a hotel with her siblings and parents, all sharing one room with no privacy. She talked about brief moments of joy, usually on a holiday, in which they came together to “reconvene” as a family. Aaleah recalled the difficulty of this time and shared about the ways poetry helped her process what was happening in her life. Her use of the word “reconvene” prompted us to consider our learning community as a site of reconvening our humanity. The song we composed together functions as a <em>reconvening of sounds</em>.</p>
 
@@ -260,10 +262,14 @@ spiritual space
   <img src="media/images/aaleah-blackbox.jpg" alt="Aaleah performing spoken word at Word Up! under a single overhead stage light.">
   <figcaption>Figure 4: Aaleah performing at <em>Word Up</em>. Surrounded by the audience and illuminated by a single overhead stage light in the Black Box Theater, this moment helped inspire the collaborative composition that became “Aaleah’s Song.””</figcaption>
 </figure>
-    
+
+<h2>Sampled Consciousness</h2>
+
 <p>During this time, Aaleah explained how money took on a new kind of value because of its absence. She thought about pennies underneath couch cushions, how usually we don’t pay much attention to them. But during that time, all money took on an increased significance for her and her family. This was partly the inspiration for “Out of Many, One,” which none of us knew at the time. This layered narrative&mdash;personal, political, and poetic&mdash;represents a kind of <em>sampled consciousness</em> (karimi, 2006), as fragments of personal history and memory are remixed into sonic counter-narratives.</p>
 
 <p style="margin-left: 2em;"><em>sampled consciousness</em>: n. a state of self (being) created by the act of sampling different experiences: education, stories, interactions, and observations. The individual takes these experiences, knowingly or unknowingly, and makes them part of their worldview, the way they create/interact. The consciousness is continually in flux, alternating, adding, subtracting, choosing. Self (being) is negotiated (p. 222).</p>
+
+<h2>Sunbeams: A Sound Poem of Ancestral Memory</h2>
 
 <p>Another source of Aaleah’s inspiration came from Angel Nafis, a New York City-based poet who we invited to feature at one of our <em>Word Up!</em> events. Her poem, “Be Blk!” includes the line, “my home is my body, / every where else is where I stay” (Nafis, 2011). Aaleah told me, “when I heard that…<em>I felt it</em>…we had just been evicted” (emphasis mine). She went on to explain that writing and performing as a teenager were “exercises in narrative and specifically counter-narrative.” Through her poetry, Aaleah resisted dominant discourses and spoke back to the oppressive and dehumanizing conditions she experienced as a young Black woman in America. Yet the ruptures in her poems always let in sunlight and joy, which she attributed to her religious and spiritual background.</p>
 
