--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -88,7 +88,7 @@ to produce something new.
 
 [Voice] This is a glimpse of tomorrow.
 
-[KF] Everything is a remix—  
+[KF] Everything is a remix&mdash;  
 appropriated
 	transformed
 		& subverted
@@ -112,7 +112,7 @@ of humanity.
 [KF] The act of creation
 is surrounded by a fog of myths. 
 
-[KF] Everything is a remix –  
+[KF] Everything is a remix&mdash;  
 appropriated
 	transformed		
 		& subverted
@@ -142,7 +142,7 @@ of the could have been.
 
 [GK] Music has different kinds of entities.
 
-[KF] Everything is a remix—  
+[KF] Everything is a remix&mdash;  
 appropriated
 	transformed
 		& subverted
@@ -178,7 +178,7 @@ which matches the interest
 of the people you have in mind
 as visitors to this site
 
-[KF] Everything is a remix—  
+[KF] Everything is a remix&mdash;  
 appropriated
 	transformed
 		& subverted
