--- a/edsel-song.html
+++ b/edsel-song.html
@@ -124,7 +124,7 @@ upon the paper on the table
 
 my literature was
 spoken word poets
-& Hip Hop artists
+&amp; Hip Hop artists
 
 I’m not hiding anymore
 
@@ -162,14 +162,14 @@ into an anthology of stories
 
 I’ve contoured my skin
 I’ve even cut my heart
-from my chest & 
+from my chest &amp; 
 stitched it to my sleeve
 
-memories & feelings
+memories &amp; feelings
 that I haven’t really explored
 in a long time
 
-damn—
+damn&mdash;
 you go through all this shit
 but you’re still here
 
@@ -225,7 +225,7 @@ is just the courage & the bravery
 to still write
 
 I walked through the door
-of Hip Hop & spoken word
+of Hip Hop &amp; spoken word
 
 almost like a fever dream, right?
 
