--- a/edsel-song.html
+++ b/edsel-song.html
@@ -235,8 +235,8 @@ when you exit
 say you are becoming
 
 taking claim to my words
-& my poetry
-& my writing
+&amp; my poetry
+&amp; my writing
 
 it’s never about where we will go
 because that will never be a concern
