--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -86,7 +86,7 @@ in those days
 we wore the crown
 
 my body is my home
-& everywhere else
+&amp; everywhere else
 is where I stay 
 
 there’s a lot of things
@@ -113,18 +113,18 @@ we all get flustered
 by our reflection
 showing up unannounced
 
-& I could tell you
+&amp; I could tell you
 you mean the world to me
 
 I could tell you
-you mean the moon & stars
+you mean the moon &amp; stars
 you mean the one candle lit
 in a dark room
 you mean the one squad lit
 in a classroom
 
 my body is my home
-& everywhere else
+&amp; everywhere else
 is where I stay 
 
 there’s a lot of things
@@ -141,13 +141,13 @@ until I met all of you
 
 like slam was a place where
 I felt like I was seen
-& people could connect with me
+&amp; people could connect with me
 
 it doesn’t matter what you call it
 insecurity is a type-everybody emotion
 
 there’s so much we can, we can
-do & be for each other
+do &amp; be for each other
 
 I think my focus 
 is like oriented towards like
@@ -156,11 +156,11 @@ truth-seeking
 how do you bend words
 like that?
 
-it made like learning & school
+it made like learning &amp; school
 feel like magic
 
 my body is my home
-& everywhere else
+&amp; everywhere else
 is where I stay 
 
 there’s a lot of things
@@ -178,12 +178,12 @@ until I met all of you
 the images are what guide
 the words
 
-& when the adults
+&amp; when the adults
 would visit our floating world
 they’d leave in a daydream
 where their memories archived
 returned on waves 
-of warmth & glee
+of warmth &amp; glee
 
 this was our power
 
@@ -191,17 +191,17 @@ honoring memory
 
 no matter what
 this is a part of
-my identity &
+my identity &amp;
 this community is part
 of who I am
 
 yeah, I want to create that space
 for people
 
-& the EN-ER-GY!
+&amp; the EN-ER-GY!
 
 my body is my home
-& everywhere else
+&amp; everywhere else
 is where I stay 
 
 there’s a lot of things
@@ -217,10 +217,10 @@ I thought I knew all of me
 until I met all of you
 
 listening to a poem
-& letting it sit...sit with me
-& letting it like rest 
+&amp; letting it sit...sit with me
+&amp; letting it like rest 
 like snowfall blanketing
-& just letting it cover me
+&amp; just letting it cover me
 
 so like learning about
 knowledge of self
@@ -228,17 +228,17 @@ caused me to really
 think about like 
 my own heritage
 
-& like
+&amp; like
 my own Blackness
 
 two Trinidadian parents
 a history in Trinidad & Tobago
 in Barbados
 
-& it’s like
+&amp; it’s like
 all of that is part of my identity
 as well as my lived experience
-& culture here
+&amp; culture here
 as a Black person
 born in America
 to two Trinidadian people
