--- a/otto-song.html
+++ b/otto-song.html
@@ -93,9 +93,8 @@ of that      smoke
 
 I could have been a ghost
 before I even died
-
 protect what the fire left
-& what the fire left      was me
+&mdash; what the fire left      was me
 
 conceptual ideas become
 physical spaces
@@ -137,7 +136,7 @@ and what the fire left      was me
 
 I’ve been thinking a lot about
 my Jewish identity
-in terms of queerness & anticolonialism
+in terms of queerness &mdash; anticolonialism
 
 I’d be another      nothing
 under history’s rotting tongue
@@ -156,11 +155,11 @@ became a      ghost
 do you know how many
 trans people      disappear
 into their own hands
-& leave this world
+&mdash; leave this world
 without a      sound?
 
 the grief of metamorphosis
-& the metamorphosis of grief
+&mdash; the metamorphosis of grief
 
 in that world
 everything is mine
@@ -176,7 +175,7 @@ I could have been a ghost
 before I even died
 
 protect what the fire left
-& what the fire left      was me
+&mdash; what the fire left      was me
 
 those genocides play out
 not just in a gas chamber
@@ -195,9 +194,9 @@ to myself, too, sometimes
 
 poem as exhibit
 
-& what if they walk through it
+&mdash; what if they walk through it
 in a different order than you curated
-right? & then you have a new thing
+right? &mdash; then you have a new thing
 
 you think I want to archive
 my friend into      memoria
@@ -227,16 +226,16 @@ I could have been a ghost
 before I even died
 
 protect what the fire left
-& what the fire left      was me
+&mdash; what the fire left      was me
 
 this is my last Word Up
-& it is really, really painful
-& hard for me 
+&mdash; it is really, really painful
+&mdash; hard for me 
 this event has been really transformative
 I wouldn’t be where I am without this event
 without the work that Mooney does
 without all of this work
-& without the people who come like you
+&mdash; without the people who come like you
 so thank you from the bottom of my heart
   </pre>
 </div>
