--- a/otto-song.html
+++ b/otto-song.html
@@ -94,7 +94,7 @@ of that      smoke
 I could have been a ghost
 before I even died
 protect what the fire left
-&mdash; what the fire left      was me
+&amp; what the fire left      was me
 
 conceptual ideas become
 physical spaces
@@ -136,7 +136,7 @@ and what the fire left      was me
 
 I’ve been thinking a lot about
 my Jewish identity
-in terms of queerness &mdash; anticolonialism
+in terms of queerness &amp; anticolonialism
 
 I’d be another      nothing
 under history’s rotting tongue
@@ -155,11 +155,11 @@ became a      ghost
 do you know how many
 trans people      disappear
 into their own hands
-&mdash; leave this world
+&amp; leave this world
 without a      sound?
 
 the grief of metamorphosis
-&mdash; the metamorphosis of grief
+&amp; the metamorphosis of grief
 
 in that world
 everything is mine
@@ -175,7 +175,7 @@ I could have been a ghost
 before I even died
 
 protect what the fire left
-&mdash; what the fire left      was me
+&amp; what the fire left      was me
 
 those genocides play out
 not just in a gas chamber
@@ -196,7 +196,7 @@ poem as exhibit
 
 &mdash; what if they walk through it
 in a different order than you curated
-right? &mdash; then you have a new thing
+right? &amp; then you have a new thing
 
 you think I want to archive
 my friend into      memoria
@@ -226,16 +226,16 @@ I could have been a ghost
 before I even died
 
 protect what the fire left
-&mdash; what the fire left      was me
+&amp; what the fire left      was me
 
 this is my last Word Up
-&mdash; it is really, really painful
-&mdash; hard for me 
+&amp; it is really, really painful
+&amp; hard for me 
 this event has been really transformative
 I wouldn’t be where I am without this event
 without the work that Mooney does
 without all of this work
-&mdash; without the people who come like you
+&amp; without the people who come like you
 so thank you from the bottom of my heart
   </pre>
 </div>
