--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ function hideTranscriptFromInner() {
 
 <p>Every effort has been made to design this webtext as an accessible multimodal composition. I always welcome feedback on improving accessibility and encourage readers to share suggestions so that authors may continue to enhance the inclusivity of their work.</p>
 
-<p><em>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</em></p> 
+<hr style="border: none; height: 2px; background-color: #ccc; margin: 2em 0;">
 
-<hr>
+<p><em>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</em></p> 
     
 <iframe class="responsive-iframe" height="450" allow="autoplay"
 title="Audio playlist for entire mixtape"
