--- a/recife.html
+++ b/recife.html
@@ -210,7 +210,7 @@ My curiosity never stop.
 
 <p>The music draws on a Brazilian palette of sounds and textures as a way to honor Freire’s homeland. I made the beat using samba-influenced percussion and a lead melody sampled from a cavaquinho–a small, four-string instrument originating in Portugal. The hook features chopped up vocals from a Brazilian folksinger, reconfigured into a new musical sentence. These aesthetic choices are part of an intentional sonic methodology, a transnational homage, and an affirmation of Hip Hop’s Afro-diasporic lineage.</p>
 
-<h2>The Praxis of Music Production</h2>
+<h2 class="centered-heading">The Praxis of Music Production</h2>
 
 <p class="center-text">The production itself was a praxis for me&mdash;<br>
 a praxis of critical music production /<br>
