--- a/long-as-i-live.html
+++ b/long-as-i-live.html
@@ -161,10 +161,12 @@ electronic.
 
 </div>
 
-    <p>“Hip Hop, carved defiantly in the soil of postmodernity, is a telling footprint of their beauty.”<br>
-&mdash;David E. Kirkland (2008, p. 74)</p>
-
 <h2>Boom-Bap, Spirituals, and the Future of English Education</h2>
+
+<p style="text-align: center; font-style: italic;">
+  “Hip Hop, carved defiantly in the soil of postmodernity, is a telling footprint of their beauty.”<br>
+  &mdash;David E. Kirkland (2008, p. 74)
+</p>
 
 <p>Over the past two decades, the field of cultural studies has converged with English education and the growing field of youth studies (Best, 2007; Furlong, 2013). One vital strand in that convergence is the study of popular culture, and especially Hip Hop. The field of <em>Hip Hop Based Education</em> (HHBE) (Hill, 2009) centers the five core elements of Hip Hop&mdash;emceeing, breakdancing, graffiti, DJing, and knowledge&mdash;as pedagogical tools within a culturally responsive, multimodal teaching framework. More recently, Hip Hop education scholars have included Hip Hop aesthetics, sensibilities, mindsets, and epistemologies as crucial to understanding the ways Hip Hop-identifying youth make sense of themselves and the world. Scholars such as H. Samy Alim (2006, 2007) and Elaine Richardson (2007) have theorized about the critical language practices of Hip Hop as powerful multimodal literacies rooted in Black Language traditions.</p>
 
