--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -224,9 +224,11 @@ Music fades
 
 <p>In schools, listening is often framed as compliance: <em>pay attention, follow directions, respect the speaker.</em> But what if we reframed listening as a critical, aesthetic, and embodied scholarly practice? What if we taught students to analyze a pause, a pitch shift, a clipped breath&mdash;just as closely as we teach them to analyze a metaphor? These questions resonate with the pedagogical vision articulated in <em>Sonic Literacy: Using Sound to Teach High School Reading and Writing</em> (Hashem &amp; Mooney, 2024), which centers sound not as a supplement to print, but as a primary mode of meaning-making in secondary classrooms. Their work emphasizes how sonic composition cultivates rhetorical awareness, creative agency, and culturally sustaining practices, shared values that characterize the sonic literacies at work in <em>WAVEFORMS</em>.</p>
 
-<p><em>To listen is to risk being changed by what we hear.<br>
-To sample is to participate in a lineage of discourse.<br>
-To remix is to say: I heard that, flipped it, and made something new.</em></p>
+<p style="text-align: center; font-style: italic;">
+  To listen is to risk being changed by what we hear.<br>
+  To sample is to participate in a lineage of discourse.<br>
+  To remix is to say: I heard that, flipped it, and made something new.
+</p>
 
 <p>In this realm of entities, research is not what we extract. It’s what we make together.</p>
 
