--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -175,22 +175,46 @@ undress for anyone other than itself
     
 <p>In qualitative research, there are many ways to employ narrative inquiry and its variations, including poetic inquiry. But one form of (re)searching especially interested me: the poem itself as research&mdash;not as reflection or artifact, but as method. I’m interested in the poem as a way of intentionally, systematically, and reflexively rendering experience through a structured system of linguistic representation. For me, poetry offers opportunities to theorize, abstract, and know more deeply. Spoken word is a truth-telling form. I first began to understand this when a student performed a spoken word piece about gentrification in his city. The poem questioned, theorized, and made an argument using lived experience as data. It had all the qualities that teachers of writing want in traditional research papers. Yet, our impulse to explain is great. As teachers and researchers, we have been trained to do this:</p>
 
-<p style="margin-left: 2em;"><em>our voices hover, linger,<br>
-always waiting to interject<br>
-like a butterfly caught between </em></p>
+<p style="margin-left: 2em; font-style: italic;">
+  our voices hover, linger,<br>
+  always waiting to interject<br>
+  like a butterfly caught &nbsp;&nbsp;&nbsp;&nbsp;between
+</p>
 
-<p style="margin-left: 2em;"><em>winter and spring</em></p>
+<p style="margin-left: 2em; font-style: italic;">
+  winter and spring
+</p>
 
-<p>What if we could suspend that desire to control meaning? What if we treated the poem not as an object to analyze, but as the analysis itself? This particular audio poem was born from my own attempt to let go of this control,</p>
+<p>What if we could suspend that desire to control meaning? What if we treated the poem&nbsp;not&nbsp;as an object to analyze, but as the analysis itself? This particular audio poem was born from my own attempt to let go of this control,</p>
 
-<p style="text-indent: 2em;"><em>to let the poem speak for itself&mdash;</em></p>
-<p style="text-indent: 2em;"><em>and yet, here I am again:</em></p>
-<p style="text-indent: 2em;"><em>the researcher, explaining,</em></p>
-<p style="text-indent: 2em;"><em>genuflecting in the footnotes,</em></p>
-<p style="text-indent: 2em;"><em>covering myself</em></p>
-<p style="text-indent: 2em;"><em>with a fig leaf of citations,</em></p>
-<p style="margin-left: 2em;"><em>the nectar of explication <br>
-dripping from my chin</em></p>
+<p style="text-indent: 2em; font-style: italic;">
+  to let the poem speak for itself&mdash;
+</p>
+
+<p style="text-indent: 2em; font-style: italic;">
+  and yet, here I am again:
+</p>
+
+<p style="text-indent: 2em; font-style: italic;">
+  the researcher, explaining,
+</p>
+
+<p style="text-indent: 2em; font-style: italic;">
+  genuflecting in the footnotes,
+</p>
+
+<p style="text-indent: 2em; font-style: italic;">
+  covering myself
+</p>
+
+<p style="text-indent: 2em; font-style: italic;">
+  with a fig leaf of citations,
+</p>
+
+<p style="margin-left: 2em; font-style: italic;">
+  the nectar of explication <br>
+  dripping from my chin
+</p>
 
 <h2>Sonic Poetic Inquiry</h2>
 
