--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -178,42 +178,21 @@ undress for anyone other than itself
 <p style="margin-left: 2em; font-style: italic;">
   our voices hover, linger,<br>
   always waiting to interject<br>
-  like a butterfly caught &nbsp;&nbsp;&nbsp;&nbsp;between
-</p>
-
-<p style="margin-left: 2em; font-style: italic;">
+  like a butterfly caught &nbsp;&nbsp;&nbsp;&nbsp;between<br>
   winter and spring
 </p>
 
 <p>What if we could suspend that desire to control meaning? What if we treated the poem&nbsp;not&nbsp;as an object to analyze, but as the analysis itself? This particular audio poem was born from my own attempt to let go of this control,</p>
 
 <p style="text-indent: 2em; font-style: italic;">
-  to let the poem speak for itself&mdash;
-</p>
-
-<p style="text-indent: 2em; font-style: italic;">
-  and yet, here I am again:
-</p>
-
-<p style="text-indent: 2em; font-style: italic;">
-  the researcher, explaining,
-</p>
-
-<p style="text-indent: 2em; font-style: italic;">
-  genuflecting in the footnotes,
-</p>
-
-<p style="text-indent: 2em; font-style: italic;">
-  covering myself
-</p>
-
-<p style="text-indent: 2em; font-style: italic;">
-  with a fig leaf of citations,
-</p>
-
-<p style="margin-left: 2em; font-style: italic;">
+  to let the poem speak for itself&mdash;<br>
+  and yet, here I am again:<br>
+  the researcher, explaining,<br>
+  genuflecting in the footnotes,<br>
+  covering myself<br>
+  with a fig leaf of citations,<br>
   the nectar of explication <br>
-  dripping from my chin
+  dripping from my chin<br>
 </p>
 
 <h2>Sonic Poetic Inquiry</h2>
