--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -184,7 +184,7 @@ undress for anyone other than itself
 
 <p>What if we could suspend that desire to control meaning? What if we treated the poem&nbsp;not&nbsp;as an object to analyze, but as the analysis itself? This particular audio poem was born from my own attempt to let go of this control,</p>
 
-<p style="text-indent: 2em; font-style: italic;">
+<p style="margin-left: 2em; font-style: italic;">
   to let the poem speak for itself&mdash;<br>
   and yet, here I am again:<br>
   the researcher, explaining,<br>
